fix: NPE-probable code fix ,apply paging in getListLabel API (#2)
- fix entity not navigating when data is empty.